Pooling of objects from multiple BHives.
Request: WPL-2826
Change-Id: Ia9e5318afce43de3b202196dba551a2bd480599d