@@ -1,8 +1,8 @@
 package io.bdeploy.minion.job;
 
 import java.text.ParseException;
-import java.util.Collections;
 import java.util.Date;
+import java.util.Map;
 import java.util.Objects;
 
 import org.quartz.CronScheduleBuilder;
@@ -21,38 +21,36 @@ import org.quartz.TriggerKey;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import io.bdeploy.common.actions.Actions;
+import io.bdeploy.bhive.BHivePoolOrganizer;
+import io.bdeploy.bhive.remote.jersey.BHiveRegistry;
 import io.bdeploy.common.util.FormatHelper;
-import io.bdeploy.jersey.actions.Action;
-import io.bdeploy.jersey.actions.ActionExecution;
-import io.bdeploy.jersey.actions.ActionService.ActionHandle;
 import io.bdeploy.minion.MinionRoot;
 
 /**
  * A job that periodically imports users and groups from LDAP servers
  */
-public class SyncLdapUserGroupsJob implements Job {
+public class OrganizePoolJob implements Job {
 
-    public static final JobKey JOB_KEY = new JobKey("SyncLdapUserGroupsJob", "Master");
+    public static final JobKey JOB_KEY = new JobKey("PoolReorgJob", "Master");
 
-    private static final Logger log = LoggerFactory.getLogger(SyncLdapUserGroupsJob.class);
+    private static final Logger log = LoggerFactory.getLogger(OrganizePoolJob.class);
 
-    public static final String DEFAULT_SYNC_SCHEDULE = "0 0 0 * * ?"; // every midnight
+    public static final String DEFAULT_REORG_SCHEDULE = "0 0 4 * * ?"; // every day at 4am.
 
     private static final String MINION = MinionRoot.class.getSimpleName();
+    private static final String REGISTRY = BHiveRegistry.class.getSimpleName();
 
     private static final String SCHEDULE = "CronSchedule";
 
-    private static final TriggerKey TRIGGER_KEY = new TriggerKey("SyncLdapUserGroupsTrigger", "Master");
+    private static final TriggerKey TRIGGER_KEY = new TriggerKey("PoolReorgTrigger", "Master");
 
-    public static void create(MinionRoot minion, String cronSchedule) {
+    public static void create(MinionRoot minion, BHiveRegistry registry, String cronSchedule) {
         if (cronSchedule == null) {
-            cronSchedule = DEFAULT_SYNC_SCHEDULE;
+            cronSchedule = DEFAULT_REORG_SCHEDULE;
         }
 
-        JobDetail job = JobBuilder.newJob(SyncLdapUserGroupsJob.class).withIdentity(JOB_KEY)
-                .withDescription("LDAP Synchronization").usingJobData(new JobDataMap(Collections.singletonMap(MINION, minion)))
-                .build();
+        JobDetail job = JobBuilder.newJob(OrganizePoolJob.class).withIdentity(JOB_KEY).withDescription("Pool Re-organization")
+                .usingJobData(new JobDataMap(Map.of(MINION, minion, REGISTRY, registry))).build();
 
         Scheduler scheduler = minion.getScheduler();
         Trigger trigger = createCronTrigger(job, cronSchedule);
@@ -66,7 +64,7 @@ public class SyncLdapUserGroupsJob implements Job {
             log.info("Job '{}' scheduled. Trigger '{}'. Next run '{}'.", job.getDescription(), cronSchedule,
                     FormatHelper.format(nextRun));
         } catch (SchedulerException e) {
-            throw new IllegalStateException("Cannot schedule LDAP Synchronization Job", e);
+            throw new IllegalStateException("Cannot schedule " + job.getDescription(), e);
         }
     }
 
@@ -77,33 +75,32 @@ public class SyncLdapUserGroupsJob implements Job {
         } catch (ParseException e) {
             log.error("Invalid cron schedule: {} using default instead", cronSchedule, e);
             return TriggerBuilder.newTrigger().forJob(job).withIdentity(TRIGGER_KEY)
-                    .withSchedule(CronScheduleBuilder.cronSchedule(DEFAULT_SYNC_SCHEDULE)).build();
+                    .withSchedule(CronScheduleBuilder.cronSchedule(DEFAULT_REORG_SCHEDULE)).build();
         }
     }
 
     @Override
     public void execute(JobExecutionContext context) throws JobExecutionException {
-        log.info("Sync LDAP users and groups job started");
+        log.info("Pool re-organization job started");
         MinionRoot mr = (MinionRoot) context.getMergedJobDataMap().get(MINION);
+        BHiveRegistry registry = (BHiveRegistry) context.getMergedJobDataMap().get(REGISTRY);
         if (mr == null) {
             throw new IllegalStateException("No minion root set");
         }
-
-        String cachedSchedule = context.getMergedJobDataMap().getString(SCHEDULE);
-        String currentSchedule = mr.getState().ldapSyncSchedule;
-        if (currentSchedule != null && !Objects.equals(cachedSchedule, currentSchedule)) {
-            // update schedule of self, but continue with execution
-            log.info("Sync LDAP schedule changed, updating to '{}'", currentSchedule);
-            create(mr, currentSchedule);
+        if (registry == null) {
+            throw new IllegalStateException("No BHive registry set");
         }
 
-        mr.getSettings().auth.ldapSettings.stream().filter(ldap -> ldap.syncEnabled).forEach(ldap -> {
-            try (ActionHandle h = mr.getActions().start(new Action(Actions.LDAP_SYNC, null, null, ldap.id),
-                    ActionExecution.fromSystem())) {
-                String feedback = mr.getUsers().importAccountsLdapServer(ldap);
-                log.info(feedback);
-            }
-        });
-        mr.modifyState(s -> s.ldapSyncLastRun = System.currentTimeMillis());
+        String cachedSchedule = context.getMergedJobDataMap().getString(SCHEDULE);
+        String currentSchedule = mr.getState().poolOrganizationSchedule;
+        if (currentSchedule != null && !Objects.equals(cachedSchedule, currentSchedule)) {
+            // update schedule of self, but continue with execution
+            log.info("Pool re-organization schedule changed, updating to '{}'", currentSchedule);
+            create(mr, registry, currentSchedule);
+        }
+
+        BHivePoolOrganizer.reorganizeAll(registry, mr.getState().poolUsageThreshold, mr.getActions());
+
+        mr.modifyState(s -> s.poolOrganizationLastRun = System.currentTimeMillis());
     }
 }
